--- a/pom.xml
+++ b/pom.xml
@@ -136,5 +136,21 @@
 
   <build>
     <finalName>seckill</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.1.4.v20140401</version>
+        <configuration>
+          <httpConnector>
+            <port>80</port>
+          </httpConnector>
+          <reload>automatic</reload>
+          <webApp>
+            <contextPath>/</contextPath>
+          </webApp>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
